# ssd1315

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  config.rs  draw_buffer.rs  error.rs  function.rs  interface.rs  lib.rs  mode.rs
src/config/: rotation.rs
src/function/: display.rs  rotation.rs
src/interface/: i2c.rs  spi.rs
src/mode/: buffered.rs
