[package]
name = "ssd1315"
version = "0.2.3"
edition = "2021"
authors = ["Yue Fei <infyniteheap1123@outlook.com>"]
description = "SSD1315 OLED driver."
license = "GPL-3.0"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["no_std", "embedded", "graphics"]
repository = "https://github.com/InfyniteHeap/ssd1315"
readme = "README.md"
documentation = "https://docs.rs/ssd1315"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.5"
display-interface-i2c = "0.5"
display-interface-spi = "0.5"
embedded-graphics-core = "0.4"
embedded-hal = "1"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true
